tests/snapshots/examples_fixtures/type_system__failing__56_strict_any_nested_rejected.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/56_strict_any_nested_rejected.flx
== compile ==
failed (compile)
== diagnostics ==
error[E423]: Unknown Type

I can't find a type named `Any`.

  examples/type_system/failing/56_strict_any_nested_rejected.flx:1:26
  |
1 | public fn first(xs: List<Any>) -> Any {
  |                          ^^^
  |                          --- unknown type used here

Hint:
  Use a built-in type, an in-scope type parameter, or a declared ADT.


error[E423]: Unknown Type

I can't find a type named `Any`.

  examples/type_system/failing/56_strict_any_nested_rejected.flx:1:35
  |
1 | public fn first(xs: List<Any>) -> Any {
  |                                   ^^^
  |                                   --- unknown type used here

Hint:
  Use a built-in type, an in-scope type parameter, or a declared ADT.


error[E300]: Return Type Mismatch

The body of `first` does not match its declared return type.

  examples/type_system/failing/56_strict_any_nested_rejected.flx:2:5
  |
1 | public fn first(xs: List<Any>) -> Any {
  |                                   --- `first` was declared to return `Any`
2 |     1
  |     ^
  |     - this expression has type `Int`

Note:
  declared return type: Any
  body type: Int

Help:
  Return a `Any` value from `first` or change its annotation.

Found 3 errors.
== stdout ==
<not executed>
